bad/incr_binop_cnne.example_compiler_output
ERROR
[1mbad/incr_binop_cnne.lat:7:13: [1;31merror: [0;1mexpression is not assignable[m
	(x != null)++;
	           [1;32m^[m
[1mbad/incr_binop_cnne.lat:7:2: [1;34mnote: [0;1mexpression starts here[m
	(x != null)++;
	[1;32m^[m
